# ocr-rs

./: .gitignore  Cargo.toml
assets/onnx/en/: en_PP-OCRv3_det_infer.onnx  readme.md  recreated_dict_v1.txt  recreated_dict_v2.txt  recreated_dict_v3.txt
src/: main.rs
