[package]
name = "ocr-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contour = "0.12.0"
image = "0.24.9"
imageproc = "0.23.0"
ndarray = "0.15.6"
# ort = "1.16.3"
ort = "^2.0.0-alpha.4"
tiny-skia = "0.11.4"
# macroquad = "0.4.5"